@@ -309,16 +309,17 @@ For "locking" onto a target, consider {buS:v}.</column>
     <table name="mem">
       <column name="_id">23545</column>
       <column name="entry_name">ngay'</column>
-      <column name="part_of_speech">n:hyp</column>
-      <column name="definition">glory?</column>
-      <column name="definition_de">Ruhm?</column>
+      <column name="part_of_speech">n</column>
+      <column name="definition">glory</column>
+      <column name="definition_de">Ruhm</column>
       <column name="synonyms"></column>
       <column name="antonyms"></column>
       <column name="see_also"></column>
-      <column name="notes">This word is known only from {wo' ngay' bochoqmeH bowIvlu'pu'!:sen:nolink} "You have been chosen to preserve the glory of the Empire!" from {Klingon Monopoly:src}.</column>
-      <column name="hidden_notes"></column>
+      <column name="notes"></column>
+      <column name="hidden_notes">An English definition has never been given for this word. Its meaning is inferred from the only example of its usage.</column>
       <column name="components"></column>
-      <column name="examples"></column>
+      <column name="examples">
+▶ {wo' ngay' bochoqmeH bowIvlu'pu'!:sen:nolink} "You have been chosen to preserve the glory of the Empire!"[1]</column>
       <column name="search_tags"></column>
       <column name="source">[1] {Klingon Monopoly:src}</column>
     </table>
