@@ -1533,7 +1533,7 @@ If an implement is used for an activity typically performed by a finger, a finge
       <column name="definition_de">regnen</column>
       <column name="synonyms"></column>
       <column name="antonyms"></column>
-      <column name="see_also">{jev:v:1}, {muD Dotlh:n}, {ghay:v:hyp}</column>
+      <column name="see_also">{jev:v:1}, {muD Dotlh:n}, {ghay:v}</column>
       <column name="notes">This verb can take an object. Its subject is usually unstated.[2]</column>
       <column name="hidden_notes">It's the sound of rain falling.</column>
       <column name="components"></column>
